--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^2.0.0",
+    "element-ui": "^2.4.11",
     "file-loader": "^2.0.0",
     "nodemon": "^1.18.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "vue": "^2.5.21",
     "vue-loader": "^15.4.2",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "babel-plugin-component": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
