--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^2.0.0",
     "element-ui": "^2.4.11",
