--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21",
+    "vuex": "^3.1.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
